# seat_reassignment

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  COMPLEXITY_PROPOSALS.md  Dockerfile  PLANNING.MD  PROJECT_DOC.md  README.md  __init__.py  client.py  conftest.py  inference.py  inference_gemini.py  inference_gemini_cloud.py  inference_gemini_debug.py  inference_ollama.py  inference_random.py  instructions_for_hf.md  models.py  openRLVE_training_script.py  openenv.yaml  pyproject.toml  requirements-train.txt
.claude/commands/: implement.md  plan.md  review.md
agent_docs/: architecture.md  inference_optimization.md  migration_spec.md  rewards_logic.md  testing_strategy.md  training_plan.md
data/: ac1_config.json  generate.py  passengers.csv  passengers.json
data/easy/: ac1_config.json  ac2_config.json  assignments.csv  config.json  flights.json  passengers.csv  passengers.json  seats_ac1.csv  seats_ac2.csv
data/hard/: ac1_config.json  ac2_config.json  assignments.csv  config.json  flights.json  generate_data.py  passengers.csv  passengers.json  seats_ac1.csv  seats_ac2.csv
data/medium/: ac2_config.json  config.json  flights.json  generate_data.py  passengers.json  seats_ac1.csv  seats_ac2.csv
server/: Dockerfile  __init__.py  __main__.py  app.py  debug.py  environment.py  requirements.txt  rewards.py  tools.py
tests/: test_environment.py  test_rewards.py
training/: README.md  __init__.py  build_grpo_prompts.py  build_sft_dataset.py  collect_sft_data.py  config.py  dataset.py  eval.py  expert_policy.py  grpo_env.py  rewards.py  rollout.py  smoke_test.py  train.py  train_grpo.py  train_sft.py
training/configs/: grpo_config.yaml  sft_config.yaml
training/tests/: test_rollout.py
training_instructions/: step_05.md  step_1.txt  step_2.txt  step_3.txt  step_4.md
